# wave-apps

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
TVShows Rating/: TVShows.py  tv_shows.csv
adas-data-analysis-dashboards/: app.py  download.py  readme.md  requirements.txt
audio-recording/: README.md  requirements.txt
churn-risk/: .flake8  .gitignore  Makefile  README.md  about.md  app.toml  requirements.txt
churn-risk-bak/: requirements.txt
credit-risk/: .snyk  Makefile  README.md  about.md  app.toml  requirements.dev.txt  requirements.test.txt  requirements.txt
data/: churnTrain.csv
docker-development/: README.md  docker-compose.yml  dockerfile  requirements.txt
emp-churn-step-by-step/: .gitignore  README.md  app.toml  requirements.txt
explaining-ratings/: .dockerignore  Dockerfile  Makefile  README.md  aboud.md  about.md  app.toml  requirements.txt  script.sh
getting-started-with-nlp/: README.md  sample_code.py
graphql-httpx-script/: Makefile  README.md  requirements.txt  script.py
guess-the-number/: .appignore  .flake8  .gitignore  .markdownlint.json  .pylintrc  Makefile  README.md  about.md  app.toml  dev_authentication_setup.md  pyproject.toml  pytest.ini  requirements.txt
guess-the-number/guess_the_number/: guess.py
guess-the-number/test/perf/: locust_test.py
image_processing/: Makefile  requirements.txt
insurance-churn-risk/: .appignore  .coveragerc  Makefile  README.md  about.md  app.toml  requirements.txt
jwt-auth/: README.md  app.py  mongodb_layer.py  requirements.txt  user_auth.py  user_register.py  util.py  wave_auth.py
music-and-mental-health/: .gitignore  README.md  music_mental_survey_clean.csv  requirements.txt
r-data.table/: demo.R
sales-forecasting/: Makefile  README.md  about.md  app.toml  requirements.txt  wave-forecast.py  wave_forecast.py
shopping-cart-recommendations/: README.md  about.md  app.toml  (+2 more)
(+145 files in other folders)
